appId: app.phraseman
---
- stopApp
- openLink: "exp+phraseman://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"
- tapOn:
    text: "Continue"
    optional: true
- waitForAnimationToEnd:
    timeout: 3000
- extendedWaitUntil:
    visible:
      id: "league-result-modal"
    timeout: 240000
- assertVisible:
    id: "league-result-close-button"
- tapOn:
    id: "league-result-close-button"
- waitForAnimationToEnd:
    timeout: 10000
- assertNotVisible:
    id: "league-result-modal"
